49.alpha - DEVEL
==========================

- Update tab and ctrl+keys to cycle through cells linearly (#5)
- Update earmark highlighting to the new accent color palette
- Add strike-through for earmark warnings
- Add pause animation

48.0 - March 14, 2025
==========================
- Let the about dialog track appdata releases
- Updated translations:
  Jordi Mas (ca); Jiri Grönroos (fi); Balázs Úr (hu).

48.rc - February 28, 2025
==========================

- Update the selection highlighting to more closely follow the focus
- Fix the focus jumping around on window resize
- Fix custom game's missing icon
- Fix print multiple puzzles dialog's scaling at lower resolutions
- Fix reset puzzle incorrectly affecting the timer after a reload
- Fix show possibilities setter not working after a reload
- Add Accessible label to earmark picker buttons
- Updated translations:
  Daniel Rusek (cs); Bruce Cowan (en_GB); Álvaro Burns (pt_BR).

48.beta - January 31, 2025
==========================

- Add custom accent color palette of 18 colors
- Add support for row/column/block highlighting with accent colors
- Update selection and highlighter colors to use oklab

48.alpha - January 10, 2025
==========================

- Port to blueprints
- Use GtkStack and its animations for the number_picker, play/pause
  and fullscreen/unfullscreen buttons
- Fix Warnings shortcut not working
- Add mouse button binding for Back
- Stop saving elapsed time on game completion when Timer is disabled
- Includes changes from 47.1
- Updated translations:
  Alexander Shopov (bg); Sergio Gil (es); Danial Behzadi (fa); Yaron
  Shahrabani (he); Ekaterine Papava (ka); Juliano de Souza Camargo
  (pt_BR); Sergej A. (ru); Martin (sl); Anders Jonsson (sv); Sabri Ünal
  (tr); Yuri Chornoivan (uk); Luming Zh (zh_CN).

47.2 - March 14, 2025
==========================
- Let the about dialog track appdata releases
- Fix the focus jumping around on resize