@@ -5,6 +5,7 @@
 - Update earmark highlighting to the new accent color palette
 - Add strike-through for earmark warnings
 - Add pause animation
+- Fix trapped focus during pause
 
 48.0 - March 14, 2025
 ==========================
